syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.statech";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message Balance {
  int32 amount = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 value = 1;
}

message DepositRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

service BankService {
  rpc getBalance(BalanceCheckRequest) returns (Balance);
  rpc withdraw(WithdrawRequest) returns (stream Money);
  rpc cashDeposit(stream DepositRequest) returns (Balance);
}

message MetaData {
  string name = 1;
  string type = 2;
}

message File {
  bytes content = 1;
}

enum Status {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message FileUploadRequest {
  oneof request {
    MetaData metadata = 1;
    File file = 2;
  }
}

message FileUploadResponse {
  string name = 1;
  Status status = 2;
}

service FileService {
  rpc upload(stream FileUploadRequest) returns(FileUploadResponse);
}
